chore: finishing swagger
